Noticed spacing issue in coffee div break.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -217,7 +217,7 @@ div.break {
   width: 400px;
   height: 52px;
   display: block;
-  margin: 0 auto;
+  margin: -15px auto 0 auto;
 }
 
 #coffee-icon {
